# FastAPI-Test-Uploadfile

./: docker-compose.yaml  main.py  pyproject.toml
