[tool.poetry]
name = "FastAPI-Test-Uploadfile"
version = "0.1.0"
description = ""
authors = ["gorira <tatsuhiko.shigoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
